# better-pdf-to-text

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.js  index.ts  ocr.ts  package.json  rustfmt.toml  tsconfig.json
.cargo/: config.toml
core/: package.json  tsconfig.json
core/src/: index.ts
examples/: basic.ts  miner.py
pdf-extract-node/: Cargo.toml  index.d.ts  index.js  package.json
pdf-extract-node/src/: pdf_extract.rs
pdf-miner-node/: binding.gyp  index.d.ts  index.js  package.json
pdf-miner-node/src/: miner.py  pdf_miner.cc
src/: lib.rs
