[package]
name = "pdf-extract-node"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Node.js binding for pdf-extract"
license = "MIT"

[lib]
crate-type = ["cdylib"]
rustc-link-lib = ["node"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
napi-sys = "2.2.3"
pdf-extract = { git = "https://github.com/jrmuizel/pdf-extract" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols" 